# Advanced-OS

./: .gitignore
prelab/: Makefile  producer_consumer.c
project1-1/: EnvironmentSetup.md  create_vm.sh  destroy_vms.sh
project1-1/cpu/src/: Readme.md  vcpu_scheduler.c
project1-1/cpu/test/: create_vm.sh
project1-1/memory/src/: Readme.md  memory_coordinator.c
project2/: readme.md
project2/.devcontainer/: Dockerfile  devcontainer.json
project2/Cluster-HOWTO/data/: analyze.ipynb
project2/Cluster-HOWTO/examples/: 2-node-8-thread.sbatch  8-node.sbatch  8-thread.sbatch  combined_hello.c  mp_hello.c  mpi_hello.c  test.py
project2/combined/: combined.c  combined.h  harness.c
project2/mpi/: gtmpi1.c  gtmpi2.c
project2/omp/: gtmp.h  gtmp1.c  gtmp2.c  harness.c
project3/: README.md  readme.txt
project3/.devcontainer/: Dockerfile  devcontainer.json
project3/src/: CMakeLists.txt  store.cc  threadpool.h  vendor_client.cc  vendor_client.h
project4/: .gitignore  README.md  run_mapreduce_test.py
project4/.devcontainer/: Dockerfile  devcontainer.json
project4/src/: CMakeLists.txt  client_call.h  const.h  file_shard.h  mapreduce_spec.h  master.cc  master.h  masterworker.proto  mr_tasks.cc  mr_tasks.h  worker.cc  worker.h  worker_client.cc  worker_client.h  worker_request.cc  worker_request.h
project4/test/: config.ini  setup_and_build.sh  user_tasks.cc
